make mini-todo work using idb_shim

--- a/mini-todo/web/todo.css
+++ b/mini-todo/web/todo.css
@@ -9,6 +9,12 @@ body {
   font: 14px Arial;
 }
 
+#idb {
+  background-color: #EEE;
+  padding: 5px;
+  margin-bottom: 5px;
+}
+
 a {
   color: #3D5C9D;
   cursor: pointer;
